# Streamlit-Escala

./: .env.example  .gitignore  README.md  app.py  data_manager.py  empresa.json  escala_generator.py  exportar_escalas.py  exportar_relatorio_atestados.py  exportar_relatorio_ferias.py  models.py  modelsss.py  pyproject.toml  test_connection.py  utils.py
data/: empresas.json
database/: check_db.py  config.py  connection.py  crud.py  init_db.py  models.py  test_connection.py
models/: __init__.py  database.py  models.py
pages/: __init__.py  cadastro_empresa.py  cadastro_folguista.py  cadastro_funcionario.py  gerar_escala.py  gerar_escala_folguista.py  gerenciar_ferias.py
scripts/: criar_dados_iniciais.py  init_database.py  test_db_connection.py
styles/: main.css
